@@ -10,20 +10,21 @@ import org.bukkit.OfflinePlayer;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Player;
-import org.bukkit.entity.Tameable;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class TamingCommand implements SubCommandInterface {
     private final Furious plugin;
 
-    public TamingCommand(Furious plugin) { this.plugin = plugin.getInstance(); }
+    public TamingCommand(Furious plugin) {
+        this.plugin = plugin.getInstance();
+    }
 
     private Collection<EntityType> allTameableTypes() {
         try {
             if (plugin.registryCache != null) return plugin.registryCache.getTameableTypes();
-        } catch (Throwable ignored) {}
+        } catch (Throwable ignored) {
+        }
         return java.util.Collections.emptyList();
     }
 
@@ -48,7 +49,8 @@ public class TamingCommand implements SubCommandInterface {
                     String keySimple = key.value().toLowerCase(Locale.ROOT);
                     if (keyNs.startsWith(partial)) suggestions.add(keyNs);
                     else if (keySimple.startsWith(partial)) suggestions.add(keySimple);
-                } catch (Throwable ignored) {}
+                } catch (Throwable ignored) {
+                }
             }
         } else if (args.length == 3 && args[1].equalsIgnoreCase("clear")) {
             String partial = args[2].toLowerCase(Locale.ROOT);
@@ -67,8 +69,16 @@ public class TamingCommand implements SubCommandInterface {
             if (!can(sender, true)) return true;
             String scope = args.length >= 3 ? args[2].toLowerCase(Locale.ROOT) : "";
             switch (scope) {
-                case "month" -> { plugin.tamingService.clearMonthFirst(); Components.sendSuccessMessage(sender, "Cleared this-month-first winners."); return true; }
-                case "year" -> { plugin.tamingService.clearYearFirst(); Components.sendSuccessMessage(sender, "Cleared this-year-first winners."); return true; }
+                case "month" -> {
+                    plugin.tamingService.clearMonthFirst();
+                    Components.sendSuccessMessage(sender, "Cleared this-month-first winners.");
+                    return true;
+                }
+                case "year" -> {
+                    plugin.tamingService.clearYearFirst();
+                    Components.sendSuccessMessage(sender, "Cleared this-year-first winners.");
+                    return true;
+                }
                 case "all" -> {
                     if (args.length >= 4 && args[3].equalsIgnoreCase("confirm")) {
                         plugin.tamingService.clearAllFirsts();
@@ -132,7 +142,8 @@ public class TamingCommand implements SubCommandInterface {
                 String keyNs = key.asString().toLowerCase(Locale.ROOT);
                 String keySimple = key.value().toLowerCase(Locale.ROOT);
                 if (in.equals(keyNs) || in.equals(keySimple)) return t;
-            } catch (Throwable ignored) {}
+            } catch (Throwable ignored) {
+            }
         }
         for (EntityType t : allTameableTypes()) {
             if (t.toString().equalsIgnoreCase(name)) return t;
@@ -144,14 +155,24 @@ public class TamingCommand implements SubCommandInterface {
         Set<String> tamed = plugin.tamingService.getTamed(playerId);
         List<EntityType> all = new ArrayList<>(allTameableTypes());
         all = all.stream().sorted(Comparator.comparing(t -> {
-            try { return t.getKey().asString(); } catch (Throwable e) { return t.toString(); }
-        })).collect(Collectors.toList());
+            try {
+                return t.getKey().asString();
+            } catch (Throwable e) {
+                return t.toString();
+            }
+        })).toList();
 
         Components.sendInfo(sender, Components.t("Tameable mobs tamed by "), Components.playerComp(displayName));
         for (EntityType t : all) {
             String key;
             String simple;
-            try { key = t.getKey().asString().toLowerCase(Locale.ROOT); simple = t.getKey().value().toLowerCase(Locale.ROOT);} catch (Throwable e) { key = t.toString().toLowerCase(Locale.ROOT); simple = key; }
+            try {
+                key = t.getKey().asString().toLowerCase(Locale.ROOT);
+                simple = t.getKey().value().toLowerCase(Locale.ROOT);
+            } catch (Throwable e) {
+                key = t.toString().toLowerCase(Locale.ROOT);
+                simple = key;
+            }
             boolean has = tamed.contains(key);
             String mark = has ? "✔" : "✘";
             NamedTextColor color = has ? NamedTextColor.GREEN : NamedTextColor.RED;
@@ -178,7 +199,7 @@ public class TamingCommand implements SubCommandInterface {
                 Components.sendColored(sender, NamedTextColor.YELLOW,
                         Components.t("["), Components.t(mark, color), Components.t("] "),
                         Components.t(simple, NamedTextColor.GOLD),
-                        Components.t("" + suffix, NamedTextColor.YELLOW)
+                        Components.t(suffix, NamedTextColor.YELLOW)
                 );
             }
         }
@@ -191,7 +212,13 @@ public class TamingCommand implements SubCommandInterface {
     private void showPlayersForType(CommandSender sender, EntityType t) {
         String key;
         String simple;
-        try { key = t.getKey().asString().toLowerCase(Locale.ROOT); simple = t.getKey().value().toLowerCase(Locale.ROOT);} catch (Throwable e) { key = t.toString().toLowerCase(Locale.ROOT); simple = key; }
+        try {
+            key = t.getKey().asString().toLowerCase(Locale.ROOT);
+            simple = t.getKey().value().toLowerCase(Locale.ROOT);
+        } catch (Throwable e) {
+            key = t.toString().toLowerCase(Locale.ROOT);
+            simple = key;
+        }
         Components.sendInfo(sender, Components.t("Firsts for "), Components.t(simple, NamedTextColor.GOLD), Components.t(":"));
         UUID server = plugin.tamingService.getServerFirst(key);
         UUID year = plugin.tamingService.getYearFirst(key);
@@ -221,8 +248,12 @@ public class TamingCommand implements SubCommandInterface {
     }
 
     @Override
-    public String getName() { return "taming"; }
+    public String getName() {
+        return "taming";
+    }
 
     @Override
-    public String getPermission() { return "furious.checklist.taming"; }
+    public String getPermission() {
+        return "furious.checklist.taming";
+    }
 }
